# ncurses_music_player

./: CMakeLists.txt  build.sh
src/: main.c
